# Haystack-Similarity-Search

./: README.md  config.py  docker-compose.yml  faiss_cluster.py  get_similar_images.py  incremental_update.py  monitor.sh  package-lock.json  package.json  prepare_embeddings.py  pyproject.toml  report.md  requirements.txt  test_faiss_workflow.py
ai-worker/: Dockerfile  main.py  requirements.txt
api-gateway/: main.py  requirements.txt
cache-service/: main.py  requirements.txt
directory-service/: main.py  requirements.txt
logging-service/: main.py
scripts/: run-ai-worker.sh  run-cache-service.sh  run-directory-service.sh  run-storage-node.sh
search-service/: Dockerfile  main.py  requirements.txt
src/: App.jsx  App1.jsx  Frontend.code-workspace  index.css
src/api/: api.js
src/components/: ContextMenu.jsx  GalleryGrid.jsx  PhotoCard.jsx  SkeletonCard.jsx  UploadButton.jsx
src/pages/: ClusterPage.jsx  ClustersPage.jsx  HomePage.jsx  SimilarPhotosPage.jsx
src/utils/: converters.js
storage-node/: Dockerfile  main.py  requirements.txt
